--- a/src/expenses-list.html
+++ b/src/expenses-list.html
@@ -55,33 +55,33 @@
         box-shadow: 0 -9px 2px 10px rgba(0, 0, 0, 0.1), 0 -8px 3px 10px rgba(204, 204, 204, 0.20);
       }
 
-      #expenses /deep/ thead.vaadin-grid-header th {
+      #expenses th {
         text-transform: uppercase;
         font-size: 12px;
         font-weight: 500;
         color: var(--primary-text-color);
       }
 
-      vaadin-grid /deep/ .total {
+      #expenses  .total {
         flex-direction: row-reverse;
       }
 
-      vaadin-grid /deep/ td.status-new {
+      #expenses  .status-new {
         color: var(--accent-color);
         font-weight: 500;
       }
 
-      vaadin-grid /deep/ td.status-in_progress {
+      #expenses .status-in_progress {
         font-weight: 500;
         font-style: italic;
         text-transform: capitalize;
       }
 
-      vaadin-grid /deep/ td.comment {
+      #expenses  .comment {
         position: relative;
       }
 
-      vaadin-grid /deep/ td.comment span {
+      #expenses .comment span {
         width: 100%;
         position: absolute;
         top: 50%;
@@ -90,41 +90,38 @@
         box-sizing: border-box;
       }
 
-      #expenses /deep/ .vaadin-grid-header [class*="sort-"]:after {
-        content: "";
-        border-width: 5px;
-        border-style: solid;
-        border-color: transparent;
-        width: 0;
-        padding: 0;
-        min-width: 0;
-        margin: 0 10px;
+      #expenses vaadin-grid-column > div {
+        padding: 16px;
+        cursor: pointer;
       }
 
-      #expenses /deep/ .vaadin-grid-header.vaadin-grid .sort-desc.vaadin-grid:after {
-        border-top-color: var(--accent-color);
-        transform: translateY(25%);
-      }
-
-      #expenses /deep/ .vaadin-grid-header.vaadin-grid .sort-asc.vaadin-grid:after {
-        border-bottom-color: var(--accent-color);
-        transform: translateY(-25%);
-      }
     </style>
 
 
-    <vaadin-grid id="expenses" frozen-columns="1">
-      <table>
-        <colgroup>
-          <col name="date" width="120" sortable sort-direction="desc" />
-          <col name="merchant" flex="1" min-width="145" sortable/>
-          <col name="total" width="90" sortable/>
-          <col name="status" width="120" sortable/>
-          <col name="comment" flex="2" min-width="260" sortable/>
-        </colgroup>
-      </table>
-    </vaadin-grid>
-    <paper-fab icon="add" on-tap="_showExpenseEditor" id="add-button"></paper-fab>
+    <vaadin-grid id="expenses" frozen-columns="1" on-cell-click="_cellClick" size="50">
+      <vaadin-grid-column width="120px">
+        <template is="header">Date</template>
+  <template>[[_formatDate(item.date)]]</template>
+  </vaadin-grid-column>
+  <vaadin-grid-column width="145px">
+    <template is="header">Merchant</template>
+    <template>[[item.merchant]]</template>
+  </vaadin-grid-column>
+  <vaadin-grid-column width="90px">
+    <template is="header">Total</template>
+    <template><span class="total">[[_formatMoney(item.total)]]</span></template>
+  </vaadin-grid-column>
+  <vaadin-grid-column width="120px">
+    <template is="header">Status</template>
+    <template><span class$="[[_getStatusClass(item.status)]]">[[item.status]]</span></template>
+  </vaadin-grid-column>
+  <vaadin-grid-column width="260px" flex="2">
+    <template is="header">Comment</template>
+    <template><span class="comment">[[item.comment]]</span></template>
+  </vaadin-grid-column>
+  </vaadin-grid>
+  <paper-fab icon="add" on-tap="_showExpenseEditor" id="add-button"></paper-fab>
+
   </template>
   <script>
     (function() {
@@ -148,54 +145,25 @@
           '_update(sortDirection)'
         ],
 
-        ready: function() {
-          var grid = this.$.expenses;
+        _formatDate: function(date) {
+          return moment(date).format('MM/DD/YYYY');
+        },
 
-          grid.addEventListener('sort-order-changed', function() {
-            if (grid.size > 0) {
-              grid.scrollToStart();
-              this._update();
-            }
-          }.bind(this));
+        _formatMoney: function(sum) {
+          return '$' + sum.toFixed(2);
+        },
 
-          grid.addEventListener('selected-items-changed', function() {
-            var selection = grid.selection.selected();
-            if (selection.length === 1) {
-              grid.getItem(selection[0], function(err, item) {
-                this.fire('edit-expense', item);
-              }.bind(this));
-            }
-          }.bind(this));
-
-          grid.cellClassGenerator = function(cell) {
-            if (cell.columnName === 'status') {
-              return 'status-' + cell.data.replace(/ /g, '-').toLowerCase();
-            } else if (cell.columnName === 'total') {
-              return 'total';
-            } else if (cell.columnName === 'comment') {
-              return 'comment';
-            }
-          };
-
-          grid.then(function() {
-            grid.columns[0].renderer = function(cell) {
-              cell.element.innerHTML = moment(cell.data).format('MM/DD/YYYY');
-            };
-            grid.columns[2].renderer = function(cell) {
-              cell.element.innerHTML = '$' + cell.data.toFixed(2);
-            };
-            grid.columns[3].renderer = function(cell) {
-              var status = cell.data.replace(/_/g, ' ');
-              status = status.charAt(0).toUpperCase() + status.slice(1);
-              cell.element.textContent = status;
-            };
-
-            grid.header.getCell(0, 2).className = 'total';
-          });
+        _getStatusClass: function(status) {
+          return 'status-' + status.replace(/ /g, '-').toLowerCase();
         },
 
         _showExpenseEditor: function() {
           this.fire('edit-expense', {});
+        },
+
+        _cellClick: function(e) {
+          console.log('Cell clicked!');
+          this.fire('edit-expense', e.detail.model.item);
         },
 
         _filtersChanged: function() {
@@ -217,8 +185,8 @@
           var status = this.filters.status;
           var start = this.filters.start;
           var end = this.filters.end;
-          var sort;
-          var direction;
+          var sort = 'date';
+          var direction = 'desc';
           if (grid.sortOrder && grid.sortOrder[0]) {
             sort = grid.columns[grid.sortOrder[0].column].name;
             direction = grid.sortOrder[0].direction;
@@ -284,7 +252,18 @@
             });
           }
 
-          grid.items = result;
+          if (result.length > 0) {
+            grid.dataSource = function(opts, callback) {
+              var startIndex = opts.page * opts.pageSize;
+              var endIndex = Math.min(startIndex + opts.pageSize, result.length);
+              callback(result.slice(startIndex, endIndex));
+            };
+            if (grid.size !== result.length) {
+              grid.size = result.length;
+            } else {
+              grid.clearCache();
+            }
+          }
         }
       });
     })();
